--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ body {
 }
 
 .header {
-    padding: 30px;
+    padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
 .header h1 {
-    
+    display: inline-block;
     font-size: 48px;
 }
 
@@ -25,9 +25,9 @@ body {
 }
 
 .header div {
-    
+    padding-top: 15px;
     margin-right: 20px;
-    float: left;
+    float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
@@ -38,27 +38,27 @@ body {
 
 .header div ul li {
     display: inline-block;
-    margin-right: 25px;
+    margin-left: 25px;
 }
 
 a {
     color: #ffffff;
     text-decoration: none;
 }
-a:hover {
+/* Added psuedo class hover to give the user confirmation of where they are clicking */
+a:hover{
     color: red;
 }
 
 p {
     font-size: 16px;
 }
-
+/* filepath had to be changed in order to load the background image */
 .hero {
     height: 800px;
     width: 100%;
-
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("file:///C:/Users/jchar/Desktop/ucla-la-fsf-pt-03-2020-u-c/01-Class-Content/01-HTML-Git-CSS/02-Homework/Develop/assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -89,56 +89,24 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
-.benefit-lead {
+/* Reduce lines of code by giving further specifing the div tag to one class, again getting rid of duplicate code */
+.Media1 {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.Media1 h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.Media1 img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+/* Reduce lines of code by giving them all one class to prevent duplicate code */
+.content2 {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -147,47 +115,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.content2 img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.content2 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
