--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("file:///C:/Users/jchar/Desktop/ucla-la-fsf-pt-03-2020-u-c/01-Class-Content/01-HTML-Git-CSS/02-Homework/Develop/assets/images/digital-marketing-meeting.jpg");
     background-size: cover;
+    background-image: url("./assets/images/digital-marketing-meeting.jpg");
     background-position: center;
 }
 
